static/css/menu.css
.article-list {
    display: flex;
    flex-direction: column;
    align-items: center;

    margin-left: auto;
    margin-right: auto;
    padding: 0 1em;

    list-style-type: none;
    max-width: 690px;
}

.article-item {
    display: block;
    width: calc(100% - 3em);
    margin: 0.5em 0;
    padding: 1em;

    border-radius: 30px;
    color: white;
    cursor: pointer;

    text-align: center;
    text-shadow: 1px 3px var(--text-color);

    --item-color: gray;
    --item-pos: 10px;

    background: var(--item-color);
    transform: translateX(var(--item-pos));
}

#article-container img {
    cursor: pointer;
}

.article-item h2 {
    font-size: 1.2em;
    margin: 0;
}

.article-item a {
    color: inherit;
    display: block;
    padding: 0;
    text-decoration: none;
}

/**** tags ****/

.article-tagged-item h2 { 
    display: inline-block;
    padding: 0 0.8em 0;
}

.tag-list {
    display: flex;
    justify-content: center;
    padding-left: 10px;
    margin-top: 0.6em;
}

.tag-item {
    border: 3px solid;
    border-radius: 50px;

    background-color: color-mix(in srgb, var(--item-color) 30%, var(--primary-color));
    border-color: color-mix(in srgb, var(--item-color) 10%, var(--primary-color));
    font-size: 0.6em;
    text-shadow: none;

    padding: 0.4em 1em !important;
    margin: 0 0.5em;
}



/**** menu subsection ****/

.page-header-title {
    font-size: 5em;
    margin: 0;
}

.page-header-subtitle {
    color: #ccc;
    text-align: center;
}

